--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -5,7 +5,7 @@ build:
 cards:
   message: "Welcome to EazyBank cards related QA APIs "
   contactDetails:
-    name: "Cherryl Pankaj - QA Lead"
+    name: "Cherryl Pankaj - Quality Assurance Lead"
     email: "cherryl@eazybank.com"
   onCallSupport:
     - (310) 875-4367
